--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,57 @@
-name: Java CI
+name: Java CI with Docker
 
 on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
     branches:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code from the repository
-    - name: Check out code
-      uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    # Step 2: Set up JDK
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      # Set up JDK
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    # Step 3: Build with Maven
-    - name: Build with Maven
-      run: mvn clean install
+      # Build with Maven (Optional if you build directly in Docker)
+      - name: Build with Maven
+        run: mvn clean install
 
-    # Step 4: Run Tests
-    - name: Run Tests
-      run: mvn test
+      # Log in to GitHub Container Registry (if needed)
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Build the Docker image
+      - name: Build Docker Image
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/todo_application:latest .
+
+      # Run container tests (optional)
+      - name: Run Container
+        run: |
+          docker run -d --name todo_application -p 8080:8080 ghcr.io/${{ github.repository_owner }}/todo_application:latest
+
+      # Run Integration Tests (optional, depends on your setup)
+      - name: Run Integration Tests
+        run: mvn verify
+
+      # Stop and clean up the container
+      - name: Stop Docker Container
+        run: docker stop todo_application && docker rm todo_application
+
+      # Push Docker Image to Container Registry (optional)
+      - name: Push Docker Image
+        run: docker push ghcr.io/${{ github.repository_owner }}/todo_application:latest
